Add Foreman 3.6 contributors

--- a/_includes/manuals/3.6/1.2_release_notes.md
+++ b/_includes/manuals/3.6/1.2_release_notes.md
@@ -179,6 +179,6 @@ For more information, see
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-<!-- update scripts/committers.rb with the correct versions and dates and fill this in -->
+Adam Ruzicka, Alexander Olofsson, Bastian Schmidt, Ben Magistro, Bernhard Suttner, Chris Roberts, Dan R. K. Ports, Elkin Aguas, Eric D. Helms, Evgeni Golov, Ewoud Kohl van Wijngaarden, Hao Chang Yu, Jannis Warnat, Jeremy Lenz, Johann Grabmann, Joniel Pasqualetto, Joshua Hoblitt, Kamil Szubrycht, Karolina Malyjurkova, Leos Stejskal, Lucy Fu, Marcel Kuehlhorn, Marcel Kühlhorn, Marek Hulán, Maria Agaphontzev, Markus Bucher, Maximilian Herrmann, Nagoor Shaik, Nofar Alfassi, Oleh Fedorenko, Ondrej Ezr, Pat Riehecky, Patrick Brideau, Paul Donohue, Peter Koprda, Romain Tartière, Ron Lavi, Samir Jha, Sayan Das, Shim Shtein, Usman Sunyaev, William Dixon
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
