Add a Foreman 3.6 deprecation

--- a/_includes/manuals/3.6/1.2_release_notes.md
+++ b/_includes/manuals/3.6/1.2_release_notes.md
@@ -33,6 +33,10 @@ For more information, see
 
 ### Deprecations
 
+#### Puppet 6 is EOL
+
+Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
+
 ### Release Notes
 
 ### Release notes for 3.6.0
