--- a/_includes/manuals/nightly/5.8.4_other_considerations.md
+++ b/_includes/manuals/nightly/5.8.4_other_considerations.md
@@ -3,4 +3,4 @@ There are other considerations when creating a cluster:
 
 1. You might want to share a common hostname, which can be set during installation or by modifying your Apache config files.
 2. You might want a custom cert to reflect the cluster's cname, and you'll want to make sure your Foreman-related infrastructure is [configured to use SSL](manuals/{{page.version}}/index.html#5.4SecuringCommunicationswithSSL).
-3. You can use a central memcached instance instead of each Foreman instance's local cache. Foreman has a [plugin](https://github.com/theforeman/foreman_memcache) you can use.
+3. You can use a central Redis instance instead of each Foreman instance's local cache.
