document memcache drop in upgrade warnings

--- a/_includes/manuals/3.6/1.2_release_notes.md
+++ b/_includes/manuals/3.6/1.2_release_notes.md
@@ -31,6 +31,10 @@ For more information, see
 
 ### Upgrade warnings
 
+#### `foreman_memcache` plugin was removed
+
+The plugin was unmaintained and didn't work since Foreman 3.4. It was removed and users are encouraged to use the native Redis caching support in Foreman.
+
 ### Deprecations
 
 #### Puppet 6 is EOL
