--- a/_includes/manuals/3.5/1.2_release_notes.md
+++ b/_includes/manuals/3.5/1.2_release_notes.md
@@ -59,6 +59,50 @@ It is safe to remove the file or remove all content.
   This data used to be part of Foreman, but was extracted to a plugin in Foreman 2.3.
   Until now this data was kept in the database, but now this data will be purged unless the plugin is installed.
 
+### Release notes for 3.5.2
+#### Foreman - API
+* Fixes API documentation typo ([#35648](https://projects.theforeman.org/issues/35648))
+
+#### Foreman - Development tools
+* Change container image to CentOS 8 Stream ([#35593](https://projects.theforeman.org/issues/35593))
+
+#### Foreman - Inventory
+* Host list interpretes HTML from comment-field ([#35977](https://projects.theforeman.org/issues/35977))
+* Windows password-encryption code changes input-value ([#35946](https://projects.theforeman.org/issues/35946))
+* No host found error after editing host's address ([#35762](https://projects.theforeman.org/issues/35762))
+
+#### Foreman - JavaScript stack
+* Add tag_type parameter to replace_value_control ([#35876](https://projects.theforeman.org/issues/35876))
+* New host details - Move Details tab out of experimental labs ([#35839](https://projects.theforeman.org/issues/35839))
+
+#### Foreman - Notifications
+* Make RSS notification stick around for 1 month instead of going away after a day ([#35866](https://projects.theforeman.org/issues/35866))
+
+#### Foreman - Settings
+* Foreman.settings.load_values is not able to pick settings which transitioned from a non-default to default value ([#35894](https://projects.theforeman.org/issues/35894))
+
+#### Foreman - Templates
+* host_puppet_environment ignores host param ([#36153](https://projects.theforeman.org/issues/36153))
+* ks= kernel parameter in Kickstart default iPXE causes RHEL9 Anaconda failure to start ([#34975](https://projects.theforeman.org/issues/34975))
+
+#### Foreman - Unattended installations
+* Pass URL parameters to foreman_url as hash ([#36019](https://projects.theforeman.org/issues/36019))
+
+#### Installer - Foreman modules
+* assets are not compressed during delivery anymore ([#36028](https://projects.theforeman.org/issues/36028))
+* mod_expires is not loaded ([#35870](https://projects.theforeman.org/issues/35870))
+* Disable Puppetserver telemetry by default ([#35728](https://projects.theforeman.org/issues/35728))
+
+#### Packaging - RPMs
+* rubygem-openscap (and thus foreman_openscap) can't be installed on CentOS Stream 8 ([#36086](https://projects.theforeman.org/issues/36086))
+* Legacy rex form is missing options for future or recurring execution ([#35997](https://projects.theforeman.org/issues/35997))
+* Introduce foreman-obsolete-packages to remove old packages ([#35743](https://projects.theforeman.org/issues/35743))
+
+#### Smart Proxy
+* Invalid syntax for curl --time-cond ([#36138](https://projects.theforeman.org/issues/36138))
+
+*A full list of changes in 3.5.2 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1669)*
+
 ### Release notes for 3.5.1
 #### Foreman - DB migrations
 * Statistics migrations are purged even if foreman_statistics is present ([#35871](https://projects.theforeman.org/issues/35871))
