Update Foreman 3.6 release notes for 3.6.0-rc2

--- a/_includes/manuals/3.6/1.2_release_notes.md
+++ b/_includes/manuals/3.6/1.2_release_notes.md
@@ -52,6 +52,7 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 * Compatibility with audited 5.1.0  ([#35893](https://projects.theforeman.org/issues/35893))
 
 #### Foreman - Compute resources
+* "Back to host" in vnc/spice console does not respect old/new host details setting ([#36139](https://projects.theforeman.org/issues/36139))
 * Console button is shown, even if Compute Resource doesn't support consoles ([#32521](https://projects.theforeman.org/issues/32521))
 
 #### Foreman - Compute resources - VMware
@@ -64,6 +65,7 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 * Statistics migrations are purged even if foreman_statistics is present ([#35871](https://projects.theforeman.org/issues/35871))
 
 #### Foreman - Dashboard
+* Dashboard widgets linking to host do not respect new/old host page setting ([#36135](https://projects.theforeman.org/issues/36135))
 * Take possibilty of report origin related settings not being there ([#36107](https://projects.theforeman.org/issues/36107))
 
 #### Foreman - Development tools
@@ -90,7 +92,7 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 * Some selectable columns on host list should have shorter headers ([#35820](https://projects.theforeman.org/issues/35820))
 * host details - Details tab cards have horizontal scroll ([#35819](https://projects.theforeman.org/issues/35819))
 * Move fields between categories on the host detail page ([#35786](https://projects.theforeman.org/issues/35786))
-* Add bios fields to reported data on host index page ([#35785](https://projects.theforeman.org/issues/35785))
+* Add BIOS fields to reported data on host index page ([#35785](https://projects.theforeman.org/issues/35785))
 * Add 'Last configuration report' to 'Recent communication' card ([#35764](https://projects.theforeman.org/issues/35764))
 * No host found error after editing host's address ([#35762](https://projects.theforeman.org/issues/35762))
 * Export button does not use selectable columns ([#35701](https://projects.theforeman.org/issues/35701))
@@ -132,8 +134,8 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 * Improve setting definition DSL and move setting registry to memory ([#29939](https://projects.theforeman.org/issues/29939))
 
 #### Foreman - Templates
+* host_puppet_environment ignores host param ([#36153](https://projects.theforeman.org/issues/36153))
 * Add pagelet mountpoints to form template to make it extensible in plugins ([#35726](https://projects.theforeman.org/issues/35726))
-* New PXEGrub2 template required in order to deploy Ubuntu 22 on EFI systems ([#35286](https://projects.theforeman.org/issues/35286))
 
 #### Foreman - Unattended installations
 * Remove Puppet host_param options from template ([#36131](https://projects.theforeman.org/issues/36131))
@@ -147,6 +149,7 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 * Ubuntu Autoinstall enable offline and online installation ([#35719](https://projects.theforeman.org/issues/35719))
 * pkg_manager.erb - support AmazonLinux 2 & 2022 ([#35670](https://projects.theforeman.org/issues/35670))
 * Use Host registration with subscription-manager on SUSE ([#35645](https://projects.theforeman.org/issues/35645))
+* New PXEGrub2 template required in order to deploy Ubuntu 22 on EFI systems ([#35286](https://projects.theforeman.org/issues/35286))
 
 #### Foreman - Web Interface
 * Template form popovers stick around even after changing tabs ([#35957](https://projects.theforeman.org/issues/35957))
@@ -166,6 +169,9 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 * mod_expires is not loaded ([#35870](https://projects.theforeman.org/issues/35870))
 * Disable Puppetserver telemetry by default ([#35728](https://projects.theforeman.org/issues/35728))
 
+#### Installer - foreman-installer script
+* Drop support for the memcache plugin ([#36170](https://projects.theforeman.org/issues/36170))
+
 #### Packaging - RPMs
 * rubygem-openscap (and thus foreman_openscap) can't be installed on CentOS Stream 8 ([#36086](https://projects.theforeman.org/issues/36086))
 * Legacy rex form is missing options for future or recurring execution ([#35997](https://projects.theforeman.org/issues/35997))
@@ -176,6 +182,7 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 * Drop DISTRO variable in Makefile ([#35971](https://projects.theforeman.org/issues/35971))
 
 #### Smart Proxy
+* Invalid syntax for curl --time-cond ([#36138](https://projects.theforeman.org/issues/36138))
 * Smart proxy settings.yml.example does not mention JOURNAL as available log_file value ([#35920](https://projects.theforeman.org/issues/35920))
 
 #### Smart Proxy - DNS
