--- a/_includes/manuals/3.6/1.2_release_notes.md
+++ b/_includes/manuals/3.6/1.2_release_notes.md
@@ -83,6 +83,7 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 * i18n automation failing due to internationalization of locators ([#35630](https://projects.theforeman.org/issues/35630))
 
 #### Foreman - Inventory
+* Columns are overlapping while adding columns through "Manage columns" tab in "All Hosts" ([#36129](https://projects.theforeman.org/issues/36129))
 * Host Details page doesn't have static UUIDs for the tabs and generate new UUID every time on page load ([#36000](https://projects.theforeman.org/issues/36000))
 * Host list interpretes HTML from comment-field ([#35977](https://projects.theforeman.org/issues/35977))
 * Windows password-encryption code changes input-value ([#35946](https://projects.theforeman.org/issues/35946))
@@ -119,6 +120,9 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 #### Foreman - Performance
 * Expose puma worker_timeout configuration option ([#35641](https://projects.theforeman.org/issues/35641))
 
+#### Foreman - PuppetCA
+* "change Puppet Master" option does not work ([#35949](https://projects.theforeman.org/issues/35949))
+
 #### Foreman - Rake tasks
 * Add support for journald into errors:fetch_log rake task ([#35903](https://projects.theforeman.org/issues/35903))
 
@@ -152,6 +156,7 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 * New PXEGrub2 template required in order to deploy Ubuntu 22 on EFI systems ([#35286](https://projects.theforeman.org/issues/35286))
 
 #### Foreman - Web Interface
+* Http proxy url text overflows in next row. ([#36018](https://projects.theforeman.org/issues/36018))
 * Template form popovers stick around even after changing tabs ([#35957](https://projects.theforeman.org/issues/35957))
 * Host form popovers stick around even after changing tabs ([#35956](https://projects.theforeman.org/issues/35956))
 
@@ -170,6 +175,7 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 * Disable Puppetserver telemetry by default ([#35728](https://projects.theforeman.org/issues/35728))
 
 #### Installer - foreman-installer script
+* Foreman-installer purges custom powerdns-plugin settings in /etc/foreman-proxy/settings.d/dns_powerdns.yml ([#36211](https://projects.theforeman.org/issues/36211))
 * Drop support for the memcache plugin ([#36170](https://projects.theforeman.org/issues/36170))
 
 #### Packaging - RPMs
