--- a/_includes/manuals/3.6/3.2.2_installer_options.md
+++ b/_includes/manuals/3.6/3.2.2_installer_options.md
@@ -162,10 +162,6 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_plugin_leapp' puppet module (<a href="https://github.com/theforeman/foreman_leapp">foreman_leapp</a>)</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-memcache</td>
-        <td>Enable 'foreman_plugin_memcache' puppet module (<a href="https://github.com/theforeman/foreman_memcache">foreman_memcache</a>)</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-monitoring</td>
         <td>Enable 'foreman_plugin_monitoring' puppet module (<a href="https://github.com/theforeman/foreman_monitoring">foreman_monitoring</a>)</td>
       </tr>
@@ -288,6 +284,10 @@ More information about compute resources can be found in the [Compute Resources 
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-dns-powerdns</td>
         <td>Enable 'foreman_proxy_plugin_dns_powerdns' puppet module (<a href="https://github.com/theforeman/smart_proxy_dns_powerdns">smart_proxy_dns_powerdns</a>)</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-dns-route53</td>
+        <td>Enable 'foreman_proxy_plugin_dns_route53' puppet module (<a href="https://github.com/theforeman/smart_proxy_dns_route53">smart_proxy_dns_route53</a>)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-dynflow</td>
@@ -2004,22 +2004,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>An array of hashes of hostgroup names and facts to add to the configuration</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--foreman-plugin-memcache-compress</td>
-        <td>will gzip-compress values larger than 1K</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-plugin-memcache-expires-in</td>
-        <td>global default for key TTL in seconds</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-plugin-memcache-hosts</td>
-        <td>an array of hosts running memcache</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-plugin-memcache-namespace</td>
-        <td>prepends each key with this value to provide simple namespacing</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--foreman-plugin-puppetdb-address</td>
         <td>Address of puppetdb API.</td>
       </tr>
@@ -2228,6 +2212,14 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>The REST API URL</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-route53-aws-access-key</td>
+        <td>The Access Key ID of the IAM account</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-route53-aws-secret-key</td>
+        <td>The Secret Access Key of the IAM account</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-console-auth</td>
         <td>Whether to enable trusted hosts and ssl for the dynflow console</td>
       </tr>
@@ -2302,6 +2294,14 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-omaha-version</td>
         <td>plugin package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-ansible-module</td>
+        <td>Ensure the Ansible module</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-ansible-module-ensure</td>
+        <td>The state of the Ansible module to ensure</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-contentdir</td>
