Foreman 3.6.1 release notes

--- a/_includes/manuals/3.6/1.2_release_notes.md
+++ b/_includes/manuals/3.6/1.2_release_notes.md
@@ -43,6 +43,15 @@ Starting 2023-03-01 Puppet 6 is end of life. Users should upgrade to Puppet 7.
 
 ### Release Notes
 
+### Release notes for 3.6.1
+#### Installer - foreman-installer script
+* Upgrade from Foreman 3.5.2 to 3.6 shows class Certs::Puppet is already declared ([#36217](https://projects.theforeman.org/issues/36217))
+
+#### Smart Proxy - TFTP
+* tftp initrd/vmlinux generation: curl malformed ([#36209](https://projects.theforeman.org/issues/36209))
+
+*A full list of changes in 3.6.1 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1702)*
+
 ### Release notes for 3.6.0
 #### Foreman - API
 * Parameter 'search' on fact_value API endpoint results in internal server error ([#35990](https://projects.theforeman.org/issues/35990))
