Replace Release notes for Foreman and Katello

--- a/_includes/manuals/nightly/1.2_release_notes.md
+++ b/_includes/manuals/nightly/1.2_release_notes.md
@@ -1,19 +1,7 @@
 ## Release notes for {{page.version}}
 
-This section will be updated prior to the next release.
+You can find the release notes on _docs.theforeman.org_:
 
-### Headline features
-
-### Upgrade warnings
-
-### Deprecations
-
-### Release Notes
-
-### Contributors
-
-We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
-
-<!-- update scripts/committers.rb with the correct versions and dates and fill this in -->
-
-As well as all users who helped test releases, report bugs and provide feedback on the project.
+* [Foreman {{page.version}} on EL](https://docs.theforeman.org/{{page.version}}/Release_Notes/index-foreman-el.html)
+* [Foreman {{page.version}} on Debian/Ubuntu](https://docs.theforeman.org/{{page.version}}/Release_Notes/index-foreman-deb.html)
+* [Foreman {{page.version}} with Katello Release Notes](https://docs.theforeman.org/{{page.version}}/Release_Notes/index-katello.html)
