fix telementry → telemetry typo in the 3.6 release notes
thanks to ikonia on IRC for spotting this!

Co-Authored-By: Matt Darcy <matt@projecthugo.co.uk>

--- a/_includes/manuals/3.6/1.2_release_notes.md
+++ b/_includes/manuals/3.6/1.2_release_notes.md
@@ -27,7 +27,7 @@ The Foreman installer will now default to disabling telemetry for new
 installations. Upgrading users will need to explicitly disable telemetry.
 
 For more information, see
-[Puppetserver's telementry documentation](https://www.puppet.com/docs/puppet/7/server/puppet_server_usage_telemetry.html).
+[Puppetserver's telemetry documentation](https://www.puppet.com/docs/puppet/7/server/puppet_server_usage_telemetry.html).
 
 ### Upgrade warnings
 
