Update nightly installer options

--- a/_includes/manuals/nightly/3.2.2_installer_options.md
+++ b/_includes/manuals/nightly/3.2.2_installer_options.md
@@ -114,10 +114,6 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_plugin_bootdisk' puppet module (<a href="https://github.com/theforeman/foreman_bootdisk">foreman_bootdisk</a>)</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-column-view</td>
-        <td>Enable 'foreman_plugin_column_view' puppet module (<a href="https://github.com/theforeman/foreman_column_view">foreman_column_view</a>)</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-default-hostgroup</td>
         <td>Enable 'foreman_plugin_default_hostgroup' puppet module (<a href="https://github.com/theforeman/foreman_default_hostgroup">foreman_default_hostgroup</a>)</td>
       </tr>
@@ -160,10 +156,6 @@ More information about compute resources can be found in the [Compute Resources 
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-leapp</td>
         <td>Enable 'foreman_plugin_leapp' puppet module (<a href="https://github.com/theforeman/foreman_leapp">foreman_leapp</a>)</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-memcache</td>
-        <td>Enable 'foreman_plugin_memcache' puppet module (<a href="https://github.com/theforeman/foreman_memcache">foreman_memcache</a>)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-monitoring</td>
@@ -288,6 +280,10 @@ More information about compute resources can be found in the [Compute Resources 
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-dns-powerdns</td>
         <td>Enable 'foreman_proxy_plugin_dns_powerdns' puppet module (<a href="https://github.com/theforeman/smart_proxy_dns_powerdns">smart_proxy_dns_powerdns</a>)</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-dns-route53</td>
+        <td>Enable 'foreman_proxy_plugin_dns_route53' puppet module (<a href="https://github.com/theforeman/smart_proxy_dns_route53">smart_proxy_dns_route53</a>)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-dynflow</td>
@@ -1296,16 +1292,20 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>The command which gets excuted on puppet service restart</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--puppet-agent-server-hostname</td>
+        <td>Hostname of your puppetserver (server directive in puppet.conf)</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--puppet-agent-server-port</td>
+        <td>Override the port of the server we connect to.</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--puppet-allow-any-crl-auth</td>
         <td>Allow any authentication for the CRL. This is needed on the puppet CA to accept clients from a the puppet CA proxy.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-auth-allowed</td>
         <td>An array of authenticated nodes allowed to access all catalog and node endpoints. default to ['$1']</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--puppet-auth-template</td>
-        <td>Use a custom template for /etc/puppetlabs/puppet/auth.conf</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-autosign</td>
@@ -1432,10 +1432,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>URL to retrieve Puppet plugins from during pluginsync</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--puppet-port</td>
-        <td>Override the port of the master we connect to.</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--puppet-postrun-command</td>
         <td>A command which gets excuted after each Puppet run</td>
       </tr>
@@ -1446,10 +1442,6 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--puppet-puppetconf-mode</td>
         <td>The permissions for /etc/puppetlabs/puppet/puppet.conf default to '0644' and '0674' on windows</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--puppet-puppetmaster</td>
-        <td>Hostname of your puppetmaster (server directive in puppet.conf)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-report</td>
@@ -1477,7 +1469,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server</td>
-        <td>Should a puppet master be installed as well as the client</td>
+        <td>Should a puppet server be installed as well as the client</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-acceptor-threads</td>
@@ -1521,7 +1513,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-ca-crl-sync</td>
-        <td>Sync puppet CA crl file to compile masters, Puppet CA Must be the Puppetserver for the compile masters. Defaults to false.</td>
+        <td>Sync puppet CA crl file to compilers, Puppet CA Must be the Puppetserver for the compilers. Defaults to false.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-ca-enable-infra-crl</td>
@@ -1665,15 +1657,15 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-group</td>
-        <td>Name of the puppetmaster group.</td>
+        <td>Group used for the puppetserver process</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-http</td>
-        <td>Should the puppet master listen on HTTP as well as HTTPS. Useful for load balancer or reverse proxy scenarios.</td>
+        <td>Should the puppet server listen on HTTP as well as HTTPS. Useful for load balancer or reverse proxy scenarios.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-http-port</td>
-        <td>Puppet master HTTP port; defaults to 8139.</td>
+        <td>Puppet server HTTP port; defaults to 8139.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-idle-timeout</td>
@@ -1681,7 +1673,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-ip</td>
-        <td>Bind ip address of the puppetmaster</td>
+        <td>Bind ip address of the puppetserver</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-jolokia-metrics-whitelist</td>
@@ -1777,7 +1769,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-package</td>
-        <td>Custom package name for puppet master</td>
+        <td>Custom package name for puppet server</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-parser</td>
@@ -1785,7 +1777,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-port</td>
-        <td>Puppet master port</td>
+        <td>Puppet server port</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-post-hook-content</td>
@@ -1817,11 +1809,11 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-puppetserver-metrics</td>
-        <td>Enable puppetserver http-client metrics Defaults to true, matching defaults in Puppetserver 5+.</td>
+        <td>Enable puppetserver http-client metrics</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-puppetserver-profiler</td>
-        <td>Enable JRuby profiling. Defaults to true, matching defaults in Puppetserver 5+. If set to false, compiler and function metrics will not be available, (eg. when enabling graphite metrics)</td>
+        <td>Enable JRuby profiling. If set to false, compiler and function metrics will not be available, (eg. when enabling graphite metrics)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-puppetserver-rundir</td>
@@ -1829,7 +1821,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-puppetserver-telemetry</td>
-        <td>Enable Dropsonde telemetry. Undef means disabled while booleans are explicit opt-in or opt-out. This is different from Puppetserver's default values. Only valid since Puppetserver 7.</td>
+        <td>Enable Dropsonde telemetry. Undef means disabled while booleans are explicit opt-in or opt-out. This is different from Puppetserver's default values.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-puppetserver-trusted-agents</td>
@@ -1849,7 +1841,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-reports</td>
-        <td>List of report types to include on the puppetmaster</td>
+        <td>List of report types to include on the puppetserver</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-request-timeout</td>
@@ -1857,7 +1849,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-ruby-load-paths</td>
-        <td>List of ruby paths Defaults based on $::puppetversion</td>
+        <td>List of ruby paths</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-selector-threads</td>
@@ -1877,7 +1869,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-ssl-dir-manage</td>
-        <td>Toggle if ssl_dir should be added to the [master] configuration section. This is necessary to disable in case CA is delegated to a separate instance</td>
+        <td>Toggle if ssl_dir should be added to the [server] configuration section. This is necessary to disable in case CA is delegated to a separate instance</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-ssl-key-manage</td>
@@ -1904,16 +1896,12 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>The external trusted facts script to use.</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--puppet-server-use-legacy-auth-conf</td>
-        <td>Should the puppetserver use the legacy puppet auth.conf? Defaults to false (the puppetserver will use its own conf.d/auth.conf) Note that Puppetserver 7 has dropped this option.</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--puppet-server-user</td>
-        <td>Name of the puppetmaster user.</td>
+        <td>Username used for the puppetserver process</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-version</td>
-        <td>Custom package version for puppet master</td>
+        <td>Custom package version for puppet server</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-versioned-code-content</td>
@@ -1977,7 +1965,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-use-srv-records</td>
-        <td>Whether DNS SRV records will be used to resolve the Puppet master</td>
+        <td>Whether DNS SRV records will be used to resolve the Puppet server</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-usecacheonfailure</td>
@@ -1996,28 +1984,8 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Specify a specific version of a package to install. The version should be the exact match for your distro. You can also use certain values like 'latest'. Note that when you specify exact versions you should also override $server_version since that defaults to $version.</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--foreman-plugin-column-view-columns</td>
-        <td>an hash of columns to add to the configuration</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--foreman-plugin-default-hostgroup-hostgroups</td>
         <td>An array of hashes of hostgroup names and facts to add to the configuration</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-plugin-memcache-compress</td>
-        <td>will gzip-compress values larger than 1K</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-plugin-memcache-expires-in</td>
-        <td>global default for key TTL in seconds</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-plugin-memcache-hosts</td>
-        <td>an array of hosts running memcache</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--foreman-plugin-memcache-namespace</td>
-        <td>prepends each key with this value to provide simple namespacing</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-plugin-puppetdb-address</td>
@@ -2228,6 +2196,14 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>The REST API URL</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-route53-aws-access-key</td>
+        <td>The Access Key ID of the IAM account</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-dns-route53-aws-secret-key</td>
+        <td>The Secret Access Key of the IAM account</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-dynflow-console-auth</td>
         <td>Whether to enable trusted hosts and ssl for the dynflow console</td>
       </tr>
@@ -2302,6 +2278,14 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-omaha-version</td>
         <td>plugin package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-ansible-module</td>
+        <td>Ensure the Ansible module</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-ansible-module-ensure</td>
+        <td>The state of the Ansible module to ensure</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-openscap-contentdir</td>
